--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
     crossorigin="anonymous"/>
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;600;700&display=swap" rel="stylesheet">
     
     <style>
@@ -363,8 +363,8 @@
     </footer>
 
 
-    <script src="js/main.js"></script>
-    <script src="js/filtro.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/filtro.js"></script>
 
 
 </body>
