--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
     </style>
     
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 
 </head>
 <body>
@@ -363,7 +363,7 @@
     </footer>
 
 
-    <script src="./js/main.js"></script>
+    <script src="main.js"></script>
     <script src="./js/filtro.js"></script>
 
 
