--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="galeria-port">
 
                 <div class="imagen-port">
-                    <img src="img/PORT/applications_vaxx_(1)_myb9.png" alt="">
+                    <img src="IMG/PORT/applications_vaxx_(1)_myb9.png" alt="">
                     <div class="hover-galeria">
                         <!--<img src="img/window-open-regular-24.png" 
                         style="height: 40px;width: 40px;" alt="">-->
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="imagen-port">
-                    <img src="img/python-99.png" alt="">
+                    <img src="IMG/python-99.png" alt="">
                     <div class="hover-galeria">
                         <!--<img src="img/window-open-regular-24.png" 
                         style="height: 40px;width: 40px;" alt="">-->
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="imagen-port">
-                    <img src="img/css-10.png" alt="">
+                    <img src="IMG/css-10.png" alt="">
                     <div class="hover-galeria">
                         <!--<img src="img/window-open-regular-24.png" 
                         style="height: 40px;width: 40px;" alt="">-->
